--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ project (BARBEQUE)
 # Load additional CMake modules
 list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/.cmake/")
 include(GetGitRevisionDescription)
-get_git_head_revision(GIT_REFSPEC GIT_SHA1)
+git_describe(GIT_SHA1)
 
 # Make sure the compiler can find include files
 include_directories (${PROJECT_SOURCE_DIR}/include)
