--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -1,8 +1,59 @@
 
 ## Add package version definition
-configure_file ("${PROJECT_SOURCE_DIR}/bbque/version.cpp.in" "${PROJECT_BINARY_DIR}/bbque/version.cpp" @ONLY)
+configure_file (
+	"${PROJECT_SOURCE_DIR}/bbque/version.cc.in"
+	"${PROJECT_BINARY_DIR}/bbque/version.cc" @ONLY
+)
 
-# Add binary "barbeque".
-set (BARBEQUE_SRC main version)
+
+# Check for libs and packages (headers + lib)
+
+
+
+find_package(Boost 1.40.0 REQUIRED program_options)
+find_package(Log4CPP)
+
+# Remove Log4CPP dependencies (if not available)
+if (LOG4CPP_FOUND EQUAL 0)
+	set (log4cpp_INCLUDE_DIRS "")
+	set (log4cpp_LIBRARY_DIRS "")
+	set (LOG4CPP_LIBRARIES "")
+	set (LOGGER_INSTANCE "console")
+	message ("Log4CPP not found, using Console logger.")
+else (LOG4CPP_FOUND EQUAL 0)
+	set (LOGGER_INSTANCE "logger_log4cpp")
+	set (BBQUE_HAVE_LOG4CPP ON)
+endif (LOG4CPP_FOUND EQUAL 0)
+
+# Add compilation dependencies
+include_directories(
+	${Boost_INCLUDE_DIRS}
+	${log4cpp_INCLUDE_DIRS}
+)
+
+# Add linking dependencies
+link_directories(
+	${Boost_LIBRARY_DIRS}
+	${log4cpp_LIBRARY_DIRS}
+)
+
+# Add "barbeque" specific flags
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
+
+# Generate configuration file
+configure_file (
+	"${PROJECT_SOURCE_DIR}/include/bbque/config.h.in"
+	"${PROJECT_BINARY_DIR}/include/bbque/config.h"
+)
+
+# Add "barbeque" target binary
+set (BARBEQUE_SRC main version object logger ${LOGGER_INSTANCE})
 add_executable (barbeque ${BARBEQUE_SRC})
+
+# Linking dependencies
+target_link_libraries(
+	barbeque
+	${LOG4CPP_LIBRARIES}
+	${Boost_LIBRARIES}
+)
 
