--- a/include/bbque/config.h.in
+++ b/include/bbque/config.h.in
@@ -1,13 +1,13 @@
 /**
- *       @file  version.cpp
- *      @brief  Source version token
+ *       @file  config.h
+ *      @brief  The target system configuration
  *
- * This provides the source code version token useful for release versioning.
+ * This collects target specific configurations
  *
  *     @author  Patrick Bellasi (derkling), derkling@google.com
  *
  *   @internal
- *     Created  01/13/2011
+ *     Created  01/14/2011
  *    Revision  $Id: doxygen.templates,v 1.3 2010/07/06 09:20:12 mehner Exp $
  *    Compiler  gcc/g++
  *     Company  Politecnico di Milano
@@ -18,6 +18,14 @@
  * =====================================================================================
  */
 
-#define GIT_SHA1 "@GIT_SHA1@"
-const char *g_git_version = GIT_SHA1;
+#ifndef BBQUE_CONFIG_H_
+#define BBQUE_CONFIG_H_
+
+/** Enable debugging (if defined) */
+#cmakedefine BBQUE_DEBUG
+
+/** Use Log4CPP (if defined) */
+#cmakedefine BBQUE_HAVE_LOG4CPP
+
+#endif // BBQUE_CONFIG_H_
 
