Add first simple static plugin
This patch provide a simple "testing" C++ static plugin.
It compiles clean, but still needs to be tested.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -58,3 +58,9 @@ target_link_libraries(
 	${Boost_LIBRARIES}
 )
 
+# Linking static plugins
+target_link_libraries(
+	barbeque
+	plugin_testingobject
+)
+
