--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,5 +84,6 @@ else (DOXYGEN_FOUND STREQUAL "NO")
 endif (DOXYGEN_FOUND STREQUAL "NO")
 
 # Recurse into project subfolders
+add_subdirectory (plugins)
 add_subdirectory (bbque)
 
