Added ModulesFactory and TestModule adapter
This patch provides an (example) object adapter for the TestModule.
The adapter allows barbeque to use transparently C coded modules.

A stub ModulesFactory class is also provided, this class will be in
charge to parse configuration parameters to properly load plugins
modules at barbeque request.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque.conf
+++ b/config/bbque.conf
@@ -29,8 +29,11 @@ log4j.rootCategory=DEBUG, raConsole
 # to redefine the category priority to a value diffent from that of
 # the rootCategory
 ###
-log4j.category.bq=		DEBUG
-log4j.category.bq.Test=		DEBUG
+log4j.category.bq=			DEBUG
+log4j.category.bq.p.test=		DEBUG
+log4j.category.bq.pm=			DEBUG
+log4j.category.bq.mf=			DEBUG
+
 
 ################################################################################
 # FileEndPoint File Appender
