--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -5,36 +5,17 @@ configure_file (
 	"${PROJECT_BINARY_DIR}/bbque/version.cc" @ONLY
 )
 
-
-# Check for libs and packages (headers + lib)
-
-
-
+# Check for required libs and packages (headers + lib)
 find_package(Boost 1.40.0 REQUIRED system program_options filesystem)
-find_package(Log4CPP)
-
-# Remove Log4CPP dependencies (if not available)
-if (LOG4CPP_FOUND EQUAL 0)
-	set (log4cpp_INCLUDE_DIRS "")
-	set (log4cpp_LIBRARY_DIRS "")
-	set (LOG4CPP_LIBRARIES "")
-	set (LOGGER_INSTANCE "console")
-	message ("Log4CPP not found, using Console logger.")
-else (LOG4CPP_FOUND EQUAL 0)
-	set (LOGGER_INSTANCE "logger_log4cpp")
-	set (BBQUE_HAVE_LOG4CPP ON)
-endif (LOG4CPP_FOUND EQUAL 0)
 
 # Add compilation dependencies
 include_directories(
 	${Boost_INCLUDE_DIRS}
-	${log4cpp_INCLUDE_DIRS}
 )
 
 # Add linking dependencies
 link_directories(
 	${Boost_LIBRARY_DIRS}
-	${log4cpp_LIBRARY_DIRS}
 )
 
 # Add "barbeque" specific flags
@@ -47,7 +28,7 @@ configure_file (
 )
 
 # Add "barbeque" target binary
-set (BARBEQUE_SRC main version object logger ${LOGGER_INSTANCE})
+set (BARBEQUE_SRC barbeque version object ${LOGGER_INSTANCE})
 set (BARBEQUE_SRC resource_manager platform_services ${BARBEQUE_SRC})
 set (BARBEQUE_SRC dynamic_library plugin_manager modules_factory ${BARBEQUE_SRC})
 add_executable (barbeque ${BARBEQUE_SRC})
@@ -55,13 +36,13 @@ add_executable (barbeque ${BARBEQUE_SRC})
 # Linking dependencies
 target_link_libraries(
 	barbeque
-	${LOG4CPP_LIBRARIES}
 	${Boost_LIBRARIES}
 )
 
 # Linking static plugins
 target_link_libraries(
 	barbeque
-	-Wl,-whole-archive plugin_testingobject -Wl,-no-whole-archive
+	-Wl,-whole-archive plugin_test_dummy -Wl,-no-whole-archive
+	-Wl,-whole-archive plugin_logger_log4cpp -Wl,-no-whole-archive
 )
 
