--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -28,8 +28,7 @@ configure_file (
 )
 
 # Add "barbeque" target binary
-set (BARBEQUE_SRC barbeque version object ${LOGGER_INSTANCE})
-set (BARBEQUE_SRC resource_manager platform_services ${BARBEQUE_SRC})
+set (BARBEQUE_SRC barbeque version object resource_manager platform_services)
 set (BARBEQUE_SRC dynamic_library plugin_manager modules_factory ${BARBEQUE_SRC})
 add_executable (barbeque ${BARBEQUE_SRC})
 
