Added ConfigurationManager class
This patch add a ConfigurationManager class which defines methods to
parse both command line arguments and a configuration file.

By default the configuration file is expected to be /etc/bbque.conf.
A command line switch is provided to define a different location.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque.conf
+++ b/config/bbque.conf
@@ -7,58 +7,48 @@
 
 
 ################################################################################
-# System IDs
+# Debugging Options
 ################################################################################
-
-
-################################################################################
-# Logger Configuration
-################################################################################
+[debug]
+test_time = 1
 
 ################################################################################
+# Log4CPP Logger Configuration
+################################################################################
+[log4cpp]
+###
 # Set root category priority and its appender
 # By default all logs are only from level greater than or equal to INFO
 ###
-#log4j.rootCategory=INFO, raFile
-log4j.rootCategory=DEBUG, raConsole
-#log4j.rootCategory=INFO, raSyslog
-#log4j.rootCategory=INFO, raRSyslog
-
-################################################################################
+#rootCategory = INFO, raFile
+#rootCategory = INFO, raSyslog
+rootCategory = INFO, raConsole
+#rootCategory = INFO, raRSyslog
+###
 # Uncomment each of the following lines for subsystems you want
 # to redefine the category priority to a value diffent from that of
 # the rootCategory
 ###
-log4j.category.bq=			DEBUG
-log4j.category.bq.p.test=		DEBUG
-log4j.category.bq.pm=			DEBUG
-log4j.category.bq.mf=			DEBUG
-
-
-################################################################################
-# FileEndPoint File Appender
+category.bq = 		DEBUG
+category.bq.Test =	DEBUG
+category.bq.pm =	DEBUG
+category.bq.rm = 	DEBUG
 ###
-log4j.appender.fileEndPoint=org.apache.log4j.FileAppender
-log4j.appender.fileEndPoint.fileName=/tmp/bbque.log
-log4j.appender.fileEndPoint.layout=org.apache.log4j.PatternLayout
-log4j.appender.fileEndPoint.layout.ConversionPattern=%d{%Y-%m-%d %H:%M:%S,%l} - %m%n
-
-################################################################################
-# rootAppenders
+# Root Appender
 ###
-log4j.appender.raConsole=org.apache.log4j.ConsoleAppender
-log4j.appender.raConsole.layout=org.apache.log4j.PatternLayout
-log4j.appender.raConsole.layout.ConversionPattern=%d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-10c : %m%n
-#log4j.appender.raFile=org.apache.log4j.FileAppender
-#log4j.appender.raFile.fileName=/mnt/flash/mmc/log/cbox.log
-#log4j.appender.raFile.layout=org.apache.log4j.PatternLayout
-#log4j.appender.raFile.layout.ConversionPattern=%d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-40c : %m%n
-#log4j.appender.raSyslog=org.apache.log4j.SyslogAppender
-#log4j.appender.raSyslog.layout=org.apache.log4j.PatternLayout
-#log4j.appender.raSyslog.layout.ConversionPattern=%d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-40c : %m%n
-#log4j.appender.raRSyslog=org.apache.log4j.RemoteSyslogAppender
-#log4j.appender.raRSyslog.syslogName=SecureNav
-#log4j.appender.raRSyslog.syslogHost=localhost
-#log4j.appender.raRSyslog.facility=-1
-#log4j.appender.raRSyslog.portNumber=-1
-#log4j.appender.raRSyslog.layout.ConversionPattern=%d{%Y-%m-%d %H:%M:%S,%l} - %-6p %40c : %m%n
+appender.raConsole = org.apache.log4j.ConsoleAppender
+appender.raConsole.layout = org.apache.log4j.PatternLayout
+appender.raConsole.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-10c : %m%n
+#appender.raFile = org.apache.log4j.FileAppender
+#appender.raFile.fileName = /var/log/bbque.log
+#appender.raFile.layout = org.apache.log4j.PatternLayout
+#appender.raFile.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-40c : %m%n
+#appender.raSyslog = org.apache.log4j.SyslogAppender
+#appender.raSyslog.layout = org.apache.log4j.PatternLayout
+#appender.raSyslog.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-40c : %m%n
+#appender.raRSyslog = org.apache.log4j.RemoteSyslogAppender
+#appender.raRSyslog.syslogName = SecureNav
+#appender.raRSyslog.syslogHost = localhost
+#appender.raRSyslog.facility = -1
+#appender.raRSyslog.portNumber = -1
+#appender.raRSyslog.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %40c : %m%n
