Added (dummy) testing framework support
This patch introduces a simple while effective testing framework.
We use test modules, i.e. plugins registering object within the "test."
namespace, to run testcases.

Once Barbeque starts it looks for modules with name starting by "test.",
these must be modules implementing the TestIF. If at least one of such
modules is found within the plugins folder, than Barbeque enters the
"testing mode". In this mode, all testing modules are executed, one at
each time, by calling the Test method they provide.
Once all tests have been executed, Barbeque simply exits.

To support this behavior, we could not link statically any module
implementing the TestIF interface, otherwise Barbeque will never enter
its main execution mode. For this reason, the static compilation of the
dummy test module is not disabled.

Whenever this simple approach should turn out to be too much simpler or
restrictive, we will provide a better interface for testing support.

NOTE: The folder containing testing modules could be defined using the "-p"
command line switch. By default, this is the system folder: thus
_ensure_ not to have testing modules within the system folder whenever
Barbeque is deployed on a target system.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/plugins/test/CMakeLists.txt
+++ b/plugins/test/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 #----- Add "testing" target static library
 set(PLUGIN_DUMMY_SRC  dummy_test dummy_plugin)
-add_library(plugin_test_dummy STATIC ${PLUGIN_DUMMY_SRC})
+#add_library(plugin_test_dummy STATIC ${PLUGIN_DUMMY_SRC})
 
 #----- Add "testing" target dynamic library
 add_library(plugin_test_dummy_so MODULE ${PLUGIN_DUMMY_SRC})
