Added GCC flags for section based compilation
This patch makes use of -ffunction-sections (gcc) and --gc-sections (ld)
to eliminate dead functions. This support should be enabled also for 3rd
party libraries in oder to optimize the overall Barbque code size.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/plugins/logger/CMakeLists.txt
+++ b/plugins/logger/CMakeLists.txt
@@ -14,6 +14,8 @@ add_library(plugin_logger_log4cpp STATIC ${PLUGIN_LOG4CPP_SRC})
 
 #----- Add library specific flags
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
 # Linking dependencies
 target_link_libraries(plugin_logger_log4cpp ${LOG4CPP_LIBRARIES})
