--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -20,6 +20,8 @@ link_directories(
 
 # Add "barbeque" specific flags
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x -lrt -ldl")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
 # Generate configuration file
 configure_file (
