CoreInteractions test plugin and SystemView
A first trivial test plugin has been developed.
It just register some resources and simulate a basic lifecycle of an
application: recipe loading, scheduling/switch of working modes, passing
of overhead information.

SystemView: Added an interface to query runtime status of applications
and resources.

recipe_loader.h : Added the header file defining the general interface
of a recipe loader plugin (previously missing).

testing/recipes : The directory stores the test recipes.

Fixed a lot of compiling errors in the files added by last commits, plus
a bounch of doxygen warning.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>
Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/plugins/test/CMakeLists.txt
+++ b/plugins/test/CMakeLists.txt
@@ -1,4 +1,7 @@
 
+#----- Add "testing" target dynamic library
+set(PLUGIN_TEST_COREINT_SRC  coreint_test coreint_plugin)
+add_library(plugin_test_coreint MODULE ${PLUGIN_TEST_COREINT_SRC})
 
 #----- Add "testing" target static library
 set(PLUGIN_DUMMY_SRC  dummy_test dummy_plugin)
@@ -11,3 +14,4 @@ set_target_properties(plugin_test_dummy_so PROPERTIES COMPILE_FLAGS "-DBBQUE_DYN
 #----- Add "testing" specific flags
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
+#add_subdirectory(coreint)
