--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -27,15 +27,22 @@ configure_file (
 	"${PROJECT_BINARY_DIR}/include/bbque/config.h"
 )
 
+# Build subdirs
+add_subdirectory(app)
+add_subdirectory(res)
+
 # Add "barbeque" target binary
 set (BARBEQUE_SRC barbeque version object resource_manager configuration_manager)
 set (BARBEQUE_SRC platform_services dynamic_library plugin_manager modules_factory ${BARBEQUE_SRC})
-set (BARBEQUE_SRC utils/timer ${BARBEQUE_SRC})
+set (BARBEQUE_SRC application_manager utils/timer ${BARBEQUE_SRC})
+
 add_executable (barbeque ${BARBEQUE_SRC})
 
 # Linking dependencies
 target_link_libraries(
 	barbeque
+	application_objs
+	resource_accounting
 	${Boost_LIBRARIES}
 )
 
@@ -44,5 +51,6 @@ target_link_libraries(
 	barbeque
 #	-Wl,-whole-archive plugin_test_dummy -Wl,-no-whole-archive
 	-Wl,-whole-archive plugin_logger_log4cpp -Wl,-no-whole-archive
+	-Wl,-whole-archive plugin_recipe_loader_xml -Wl,-no-whole-archive
 )
 
