Removing _some_ GCC flags for sections handling
This patch remove the usage of section based compilation for the
building of the Barbque core. Indeed, this flags should be used only
when a monolitic build profile will be defined otherwise we risk to
remove core unused symbols which are still required to successfully load
(and link) some modules at run-time.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -20,8 +20,9 @@ link_directories(
 
 # Add "barbeque" specific flags
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x -lrt -ldl")
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
+# This flags should be used only when a monolitic build profile will be defined
+#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
+#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
 # Generate configuration file
 configure_file (
