Minor updates on Utils and Timer
The timer class is now build as static library so that it could be
linked also by the RTLib code. The container_of code has been removed
since it is a pure-C implementation, now we just use pointers aritmethis
directly.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -31,6 +31,7 @@ configure_file (
 )
 
 # Build subdirs
+add_subdirectory(utils)
 add_subdirectory(app)
 add_subdirectory(res)
 
@@ -50,6 +51,7 @@ add_executable (barbeque ${BARBEQUE_SRC})
 # Linking dependencies
 target_link_libraries(
 	barbeque
+	bbque_utils
 	application_objs
 	resource_accounting
 	${Boost_LIBRARIES}
