[RTLIB] WIP: basic channel setup/teardown
This is a WIP commit with some updated on the RTLib to support channel
setup and teardown, especially referring the FIFO based communication
channel.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/rtlib/CMakeLists.txt
+++ b/rtlib/CMakeLists.txt
@@ -36,6 +36,7 @@ add_library(bbque_rtlib SHARED ${RTLIB_SRC})
 # Linking dependencies
 target_link_libraries(
 	bbque_rtlib
+	bbque_utils
 	${Boost_LIBRARIES}
 )
 
