[RTLIB_TESTAPP] Added first RTLib test app
This patch provides a first (incompelte) example application using the
RTLib to interact with the Barbque RTRM.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,3 +93,4 @@ endif (DOXYGEN_FOUND STREQUAL "NO")
 add_subdirectory (rtlib)
 add_subdirectory (plugins)
 add_subdirectory (bbque)
+add_subdirectory (testing)
