[Bbque.conf] Added some more supported options
This patch add (with default values) some more supported configuration
options.

TODO: debugging is still by default enabled... we should change the
default values before the first stable release.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque.conf
+++ b/config/bbque.conf
@@ -13,6 +13,24 @@
 test_time = 1
 
 ################################################################################
+# Recipes Loader Options
+################################################################################
+[rloader]
+xml.recipe_dir = /etc/bbque/recipes
+
+################################################################################
+# RPC Channel Options
+################################################################################
+[rpc]
+fif.dir = /var/bbque
+
+################################################################################
+# Logger Options
+################################################################################
+[logger]
+log4cpp.conf_file = /etc/bbque/bbque.conf
+
+################################################################################
 # Log4CPP Logger Configuration
 ################################################################################
 [log4cpp]
@@ -33,6 +51,10 @@ category.bq = 		DEBUG
 category.bq.Test =	DEBUG
 category.bq.pm =	DEBUG
 category.bq.rm = 	DEBUG
+category.bq.ap = 	DEBUG
+category.rpc   = 	DEBUG
+category.rpc.fif  = 	DEBUG
+category.rpc.prx  = 	DEBUG
 ###
 # Root Appender
 ###
