[RTLIB_CLIENT] Added (WIP) ExC registration
This patch add the code for registration of new Execution Contexts.
The registration is subject to a prior library initialization, thus
an assert (debug version) or NULL return value (release version) are
used to signal the wrong library usage.

TODO add RTLIB server side code and test the library.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/plugins/test/CMakeLists.txt
+++ b/plugins/test/CMakeLists.txt
@@ -9,7 +9,8 @@ set(PLUGIN_DUMMY_SRC  dummy_test dummy_plugin)
 
 #----- Add "testing" target dynamic library
 add_library(plugin_test_dummy_so MODULE ${PLUGIN_DUMMY_SRC})
-set_target_properties(plugin_test_dummy_so PROPERTIES COMPILE_FLAGS "-DBBQUE_DYNAMIC_PLUGIN")
+set_target_properties(plugin_test_dummy_so PROPERTIES COMPILE_FLAGS
+	"-DBBQUE_DYNAMIC_PLUGIN")
 
 #----- Add "testing" target dynamic library
 set(PLUGIN_TEST_APROX_SRC  aprox_test aprox_plugin)
