[SignalsManager] Added initial implementation
This patch provides an initial implementation for the SignalsManager class
which is in charge to define the proper support to catch system generated
signals which should trigger actions on the Barbeque framework.

Up to know we provide handling for INT and QUIT signals, which trigger
respectively a normal or abortive Barbeque termination.
The normal termination (SIGINT signal) takes care to stop all the active
applications and to clean-up all open descriptor.
Instead, the abortive termination (SIGQUIT) will produce a program
termination without releasing resources and eventually producing a dump
which could support application debugging.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -36,9 +36,12 @@ add_subdirectory(app)
 add_subdirectory(res)
 
 # Add "barbeque" target binary
-set (BARBEQUE_SRC barbeque version object resource_manager configuration_manager)
-set (BARBEQUE_SRC platform_services dynamic_library plugin_manager modules_factory ${BARBEQUE_SRC})
-set (BARBEQUE_SRC application_manager application_proxy rpc_proxy console_logger ${BARBEQUE_SRC})
+set (BARBEQUE_SRC barbeque version object configuration_manager console_logger)
+set (BARBEQUE_SRC platform_services dynamic_library ${BARBEQUE_SRC})
+set (BARBEQUE_SRC plugin_manager modules_factory ${BARBEQUE_SRC})
+set (BARBEQUE_SRC resource_manager application_manager ${BARBEQUE_SRC})
+set (BARBEQUE_SRC application_proxy rpc_proxy ${BARBEQUE_SRC})
+set (BARBEQUE_SRC signals_manager ${BARBEQUE_SRC})
 if(BBQUE_TEST_PLATFORM_DATA)
 	# This is just a temporary replacement for the still missing
 	# ResourceAbstraction module
