--- a/config/bbque.conf
+++ b/config/bbque.conf
@@ -52,6 +52,7 @@ category.bq.Test =	DEBUG
 category.bq.pm =	DEBUG
 category.bq.rm = 	DEBUG
 category.bq.ap = 	DEBUG
+category.bq.sig = 	DEBUG
 category.rpc   = 	DEBUG
 category.rpc.fif  = 	DEBUG
 category.rpc.prx  = 	DEBUG
