[YaMCA] Changed plugin filename
This simple patch update the plugin filename for the YaMCA policy to be
more consistent with others.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/plugins/schedpol/CMakeLists.txt
+++ b/plugins/schedpol/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 #----- Add "yamca" target static library
 set(PLUGIN_YAMCA_SRC  yamca_schedpol yamca_plugin)
-add_library(plugin_schedpol_yamca_so MODULE ${PLUGIN_YAMCA_SRC})
+add_library(plugin_schedpol_yamca MODULE ${PLUGIN_YAMCA_SRC})
 
 #----- Add "testing" specific flags
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
