[Test] Added (WIP) ApplicationProxyTest plugin
This patch add the initial implementaiton of a plugin to test the
ApplicationProxy module. The plugin make use of a simple recipe which is
based on the reference architecture hard-coded within the plugin itself.

TODO: add support for testing real applications connecting to Barbeque

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/plugins/test/CMakeLists.txt
+++ b/plugins/test/CMakeLists.txt
@@ -11,9 +11,12 @@ set(PLUGIN_DUMMY_SRC  dummy_test dummy_plugin)
 add_library(plugin_test_dummy_so MODULE ${PLUGIN_DUMMY_SRC})
 set_target_properties(plugin_test_dummy_so PROPERTIES COMPILE_FLAGS "-DBBQUE_DYNAMIC_PLUGIN")
 
+#----- Add "testing" target dynamic library
+set(PLUGIN_TEST_APROX_SRC  aprox_test aprox_plugin)
+add_library(plugin_test_aprox MODULE ${PLUGIN_TEST_APROX_SRC})
+
 #----- Add "testing" specific flags
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
-#add_subdirectory(coreint)
