[RTLIB_TestApp] Added a better test application
This is a better RTLIB Test Application, providing also the definition
of a BbqueEXC base class which can be conveniently used to more easily
integrate applications within the Barbque RTRM.

The base class provides a set of virtual methods which can be extended to
define the businness logic of a Barbque Execution Context, while completely
hiding the glue code to manage the interaction with the Barbeque RTRM.

The methods that can be extended are:
- onConfigure(AWM)
	to switch the application to the specified AWM
- onSuspend()
	to suspend the workload processing moving the EXC in an idle state
- onRun()
	to execute one piece of workload, till the next synchronization point
- onMonitor()
	to evaluate the QoS of the last completed wokload

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/testing/rtlib/CMakeLists.txt
+++ b/testing/rtlib/CMakeLists.txt
@@ -3,9 +3,14 @@
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x -lrt -ldl")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
+if(BBQUE_DEBUG)
+	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBBQUE_DEBUG")
+endif(BBQUE_DEBUG)
+
+
 
 #----- Add "dummy_app" target application
-set(RTLIB_TESTAPP_SRC app timer main)
+set(RTLIB_TESTAPP_SRC bbque_exc timer main)
 add_executable(rtlib_testapp ${RTLIB_TESTAPP_SRC})
 
 # Linking dependencies
